--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
       <artifactId>micrometer-registry-prometheus</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+      <version>2.2.3.RELEASE</version>
+    </dependency>
 
   </dependencies>
 
